; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_queue.c_cw1200_queue_register_post_gc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/st/cw1200/extr_queue.c_cw1200_queue_register_post_gc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_head = type { i32 }
%struct.cw1200_queue_item = type { i32 }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_head*, %struct.cw1200_queue_item*)* @cw1200_queue_register_post_gc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cw1200_queue_register_post_gc(%struct.list_head* %0, %struct.cw1200_queue_item* %1) #0 {
  %3 = alloca %struct.list_head*, align 8
  %4 = alloca %struct.cw1200_queue_item*, align 8
  %5 = alloca %struct.cw1200_queue_item*, align 8
  store %struct.list_head* %0, %struct.list_head** %3, align 8
  store %struct.cw1200_queue_item* %1, %struct.cw1200_queue_item** %4, align 8
  %6 = load i32, i32* @GFP_ATOMIC, align 4
  %7 = call %struct.cw1200_queue_item* @kmalloc(i32 4, i32 %6)
  store %struct.cw1200_queue_item* %7, %struct.cw1200_queue_item** %5, align 8
  %8 = load %struct.cw1200_queue_item*, %struct.cw1200_queue_item** %5, align 8
  %9 = icmp ne %struct.cw1200_queue_item* %8, null
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @BUG_ON(i32 %11)
  %13 = load %struct.cw1200_queue_item*, %struct.cw1200_queue_item** %5, align 8
  %14 = load %struct.cw1200_queue_item*, %struct.cw1200_queue_item** %4, align 8
  %15 = call i32 @memcpy(%struct.cw1200_queue_item* %13, %struct.cw1200_queue_item* %14, i32 4)
  %16 = load %struct.cw1200_queue_item*, %struct.cw1200_queue_item** %5, align 8
  %17 = getelementptr inbounds %struct.cw1200_queue_item, %struct.cw1200_queue_item* %16, i32 0, i32 0
  %18 = load %struct.list_head*, %struct.list_head** %3, align 8
  %19 = call i32 @list_add_tail(i32* %17, %struct.list_head* %18)
  ret void
}

declare dso_local %struct.cw1200_queue_item* @kmalloc(i32, i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @memcpy(%struct.cw1200_queue_item*, %struct.cw1200_queue_item*, i32) #1

declare dso_local i32 @list_add_tail(i32*, %struct.list_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
